--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Portofolio Shandy Mayoraya</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-mobile.css">
+    <link rel="stylesheet" href="css/style-pad.css">
     <link rel="stylesheet" href="fontawesome/css/all.css">
 
   <!-----------------------------------AOS----------------------------------------------->  
@@ -270,19 +271,19 @@
                 <p>Beberapa Project Yang Pernah Saya Buat</p>
             </div>
             <div class="c-a-projek">
-                <div data-aos="fade-right" class="c-projek1">
+                <div data-aos="fade-up" class="c-projek1">
                     <div class="b-projek1">
                         <h3 id="renstore">Ren Store</h3>
                         <p id="d-renstore">Website penyedia Topup game khususnya Mobile legend<br>Renstore adalah sebuah website yang saya buat dari tugas kuliah pada yang <br>dibuat dengan menggunakan HTML, CSS, dan JavaScript</p>
                     </div>
                 </div>
-                <div data-aos="fade-left" class="c-projek2">
+                <div data-aos="fade-up" class="c-projek2">
                     <div class="b-projek2">
                         <h3 id="shinka">Shinka Resto</h3>
                         <p id="d-shinka">Website restoran<br>Shinka resto adalah sebuah website yang saya buat dari tugas kuliah <br> yang dibuat dengan menggunakan HTML, CSS, dan JavaScript<br>dan memiliki database yang terbuat dari google sheet</p>
                     </div>
                 </div>
-                <div data-aos="fade-right" class="c-projek3">
+                <div data-aos="fade-up" class="c-projek3">
                     <a href="https://renstore.github.io/praktikum-pw/">
                         <div class="b-projek3">
                             <h3 id="tugas">Project Kuliah</h3>
