--- a/index.html
+++ b/index.html
@@ -149,26 +149,30 @@
                 <label data-aos="fade-up" id="label" class="c-btn">
                     <li class="fa-brands fa-css3"></li>
                     <P>CSS</P>
+                    <div class="bar-persen">
+                        <div id="b-1" class="b-1">
+                            <div class="load-css"></div>
+                        </div>
+                    </div>
                 </label>
                 <label data-aos="fade-up" id="label" class="c-btn">
                     <li class="fa-brands fa-html5"></li>
                     <p>HTML</p>
+                    <div class="bar-persen">
+                        <div id="b-2" class="b-1">
+                            <div class="load-html"></div>
+                        </div>
+                    </div>
                 </label>
                 <label data-aos="fade-up" id="label" class="c-btn">
                     <li class="fa-brands fa-js"></li>
                     <P>JavaScript</P>
-                </label>
-                <div data-aos="fade-up" class="bar-persen">
-                    <div id="b-1" class="b-1">
-                        <div class="load-css"></div>
+                    <div class="bar-persen">
+                        <div id="b-3" class="b-1">
+                            <div class="load-js"></div>
+                        </div>
                     </div>
-                    <div id="b-2" class="b-1">
-                        <div class="load-html"></div>
-                    </div>
-                    <div id="b-3" class="b-1">
-                        <div class="load-js"></div>
-                    </div>
-                </div>
+                </label>       
             </div>
         </span>
 
@@ -254,9 +258,7 @@
 <!-----------------------Garis------------------------------>
         <div class="p-animasi">
             <div class="c-p-animasi">
-                <div id="animasi-slide" class="animasi1">
-                    <p>TERIMAKASIH SUDAH MAMPIR</p>
-                </div>
+                <div data-aos="fade-right" id="animasi-slide" class="animasi1"></div>
             </div>
         </div>
 
